--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div id="form-container">
           <form id="form" autocomplete="off">
             <input id="note-title" placeholder="Title" type="text">
-            <input id="note-text" placeholder="Take a note..." type="text">
+            <input id="note-text" placeholder="Add a note..." type="text">
             <div id="form-buttons">
-              <button type="submit" id="submit-button">Submit</button>
-              <button type="button" id="form-close-button">Close</button>
+              <button type="submit" id="submit-button">Add note</button>
+              <button type="button" id="form-close-button">Cancel</button>
             </div>
           </form>
         </div>
