--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div id="notes"></div>
         <div id="placeholder">
-          <img alt="img" id="placeholder-logo" src="https://icon.now.sh/lightbulb_outline">
+          <img alt="img" id="placeholder-logo" src="/svg/back.svg">
           <p id="placeholder-text">Notes you add appear here</p>
         </div>
         <div id="color-tooltip">
